snapshots/serde/test_suite/tests/ui/identifier/other_untagged.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 10
kind: unit
spaces:
  - name: main
    start_line: 10
    end_line: 10
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 3
        N1: 3
        n2: 1
        N2: 1
        length: 4
        estimated_program_length: 4.755
        purity_ratio: 1.189
        vocabulary: 4
        volume: 8
        difficulty: 1.5
        level: 0.667
        effort: 12
        time: 0.667
        bugs: 0.002
      loc:
        sloc: 1
        ploc: 1
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 1
        ploc_average: 1
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 1
        sloc_max: 1
        cloc_min: 0
        cloc_max: 0
        ploc_min: 1
        ploc_max: 1
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 159.957
        mi_sei: 155.17
        mi_visual_studio: 93.542
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 6
    N1: 12
    n2: 8
    N2: 10
    length: 22
    estimated_program_length: 39.51
    purity_ratio: 1.796
    vocabulary: 14
    volume: 83.762
    difficulty: 3.75
    level: 0.267
    effort: 314.107
    time: 17.45
    bugs: 0.015
  loc:
    sloc: 10
    ploc: 8
    lloc: 0
    cloc: 0
    blank: 2
    sloc_average: 5
    ploc_average: 4
    lloc_average: 0
    cloc_average: 0
    blank_average: 1
    sloc_min: 1
    sloc_max: 1
    cloc_min: 0
    cloc_max: 0
    ploc_min: 1
    ploc_max: 1
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 0
  nom:
    functions: 1
    closures: 0
    functions_average: 0.5
    closures_average: 0
    total: 1
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 110.213
    mi_sei: 83.506
    mi_visual_studio: 64.452
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0

